; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/vxge/extr_vxge-main.c_vxge_post.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/vxge/extr_vxge-main.c_vxge_post.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.__vxge_hw_ring = type { i32 }

@VXGE_HW_RXSYNC_FREQ_CNT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8**, i8*, %struct.__vxge_hw_ring*)* @vxge_post to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vxge_post(i32* %0, i8** %1, i8* %2, %struct.__vxge_hw_ring* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.__vxge_hw_ring*, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i8** %1, i8*** %6, align 8
  store i8* %2, i8** %7, align 8
  store %struct.__vxge_hw_ring* %3, %struct.__vxge_hw_ring** %8, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = load i32, i32* %10, align 4
  store i32 %11, i32* %9, align 4
  %12 = load i32*, i32** %5, align 8
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* @VXGE_HW_RXSYNC_FREQ_CNT, align 4
  %15 = srem i32 %13, %14
  %16 = icmp eq i32 %15, 0
  br i1 %16, label %17, label %29

17:                                               ; preds = %4
  %18 = load i8**, i8*** %6, align 8
  %19 = load i8*, i8** %18, align 8
  %20 = icmp ne i8* %19, null
  br i1 %20, label %21, label %26

21:                                               ; preds = %17
  %22 = load %struct.__vxge_hw_ring*, %struct.__vxge_hw_ring** %8, align 8
  %23 = load i8**, i8*** %6, align 8
  %24 = load i8*, i8** %23, align 8
  %25 = call i32 @vxge_hw_ring_rxd_post_post_wmb(%struct.__vxge_hw_ring* %22, i8* %24)
  br label %26

26:                                               ; preds = %21, %17
  %27 = load i8*, i8** %7, align 8
  %28 = load i8**, i8*** %6, align 8
  store i8* %27, i8** %28, align 8
  br label %33

29:                                               ; preds = %4
  %30 = load %struct.__vxge_hw_ring*, %struct.__vxge_hw_ring** %8, align 8
  %31 = load i8*, i8** %7, align 8
  %32 = call i32 @vxge_hw_ring_rxd_post_post(%struct.__vxge_hw_ring* %30, i8* %31)
  br label %33

33:                                               ; preds = %29, %26
  %34 = load i32, i32* %9, align 4
  %35 = add nsw i32 %34, 1
  store i32 %35, i32* %9, align 4
  %36 = load i32, i32* %9, align 4
  %37 = load i32*, i32** %5, align 8
  store i32 %36, i32* %37, align 4
  ret void
}

declare dso_local i32 @vxge_hw_ring_rxd_post_post_wmb(%struct.__vxge_hw_ring*, i8*) #1

declare dso_local i32 @vxge_hw_ring_rxd_post_post(%struct.__vxge_hw_ring*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
